# libgit2-backends

sqlite/: CMakeLists.txt  pool.c  pool.h  refdb_helper.h  sqlite_odb_backend.c  sqlite_odb_backend.h  sqlite_refdb_backend.c  sqlite_refdb_backend.h  vector.c  vector.h
sqlite/tests/: test_refdb_sqlite.c
